# pic-deposition

./: .gitignore  .zenodo.json  CITATION.cff  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
data/benchmarks/: amortized_timestep.csv  benchmark.csv  benchmark_gpu.csv  benchmark_sim.csv  conservation_study.csv  landau_damping.csv  langmuir_convergence.csv  noise_vs_grid.csv  production_sim.csv  timestep_profile.csv  two_stream_quasi1d.csv  two_stream_validation.csv  validation.csv  validation_multi_seed.csv
docs/: RELEASE_v1.0.0.txt  RELEASE_v1.0.2.txt  RELEASE_v1.0.3.txt  RELEASE_v1.0.4.txt  RELEASE_v1.0.5.txt  SUBMISSION_CHECKLIST.txt  USAGE.txt  ZENODO_MANUAL_UPLOAD.txt  ZENODO_TROUBLESHOOTING.txt
examples/: cic_benchmark.sh  run_validation.sh
paper/: main.tex  references.bib
paper/cpc/: appendix_a.tex  appendix_b.tex  main.tex  program_summary.tex
paper/cpc/sections/: 01_introduction.tex  02_related_work.tex  04_program_structure.tex  05_installation.tex  07_results.tex  08_experimental_scope.tex  08_literature_gamma.tex  08_physics_validation.tex  09_code_comparison.tex  10_conclusions.tex  11_code_availability.tex
paper/figures/: benchmark_summary.tex  benchmark_summary.txt  cross_platform_summary.tex  gpu_priv_summary.tex  gpu_summary.tex  two_stream_summary.tex
paper/sections/: 01_introduction.tex  02_related_work.tex  03_methods.tex  04_performance.tex  05_implementation.tex  06_methodology.tex  07_results.tex  08_discussion.tex  09_analysis.tex
scripts/: compile_cpc_paper.sh  compile_paper.sh  kaggle_gpu_benchmark.sh  make_zenodo_archive.sh  plot_results.py  run_all_benchmarks.sh
src/: main_benchmark.cpp  main_sim.cpp  main_test.cpp  main_validation.cpp
src/benchmark/: benchmark_runner.cpp  benchmark_runner.hpp
src/deposition/: cic.cpp  deposition.cpp  deposition.hpp  deposition_impl.hpp  deposition_parallel.cpp  deposition_parallel.hpp  esirkepov.cpp  ngp.cpp  tsc.cpp
src/deposition/cuda/: deposition_cuda.cu  deposition_cuda.hpp
src/pic/: diagnostics.cpp  diagnostics.hpp  domain.hpp  field_grid.cpp  field_grid.hpp  particles.hpp  particles_aos.cpp  particles_soa.cpp  physics_studies.cpp  physics_studies.hpp  poisson_fft.cpp  poisson_fft.hpp  poisson_gs.cpp  simulation.cpp  simulation.hpp  validation.cpp  validation.hpp
src/sorting/: cell_sort.cpp  cell_sort.hpp
